feat(gemini): configure Gemini with credentials from home directory
- Extract project-id from google-credentials.json automatically
- Add default location us-central1 (configurable via property)
- Minimize application.yaml configuration (no duplication)
- Add Gson dependency for JSON parsing
- Credentials file moved to ~/.gromozeka/ (ignored by dev-data/.gitignore)

--- a/presentation/src/jvmMain/resources/application.yaml
+++ b/presentation/src/jvmMain/resources/application.yaml
@@ -5,10 +5,8 @@ spring:
     location: classpath:banner.txt
   ai:
     google-genai:
-      project-id: totemic-stack-367712
-      location: us-central1
-      use-vertex-ai: true
-      credentials-uri: file:../google-credentials.json
+      # project-id извлекается из google-credentials.json
+      # location: us-central1  # опционально, дефолт us-central1
 
     ollama:
       base-url: http://localhost:11434
