fix(tree-sitter): Disable configuration cache in CI workflow
Configuration cache fails to serialize fixCMakePaths task because it
references grammarDir variable from outer scope. Disabling config cache
for grammar generation step to avoid serialization errors.

This allows the build to complete successfully on all platforms.

--- a/.github/workflows/build-jni-libraries.yml
+++ b/.github/workflows/build-jni-libraries.yml
@@ -82,7 +82,7 @@ jobs:
         shell: bash
       
       - name: Generate grammar files
-        run: ./gradlew :infrastructure-ai:tree-sitter-kotlin-grammar:generateGrammarFiles
+        run: ./gradlew :infrastructure-ai:tree-sitter-kotlin-grammar:generateGrammarFiles --no-configuration-cache
       
       - name: Create tree-sitter-kotlin header
         run: |
